# USACO-Problems-AssortedC-

./: a.out  exercise.cpp  linear.cpp  photo.cpp  poster.cpp  sailing.cpp  stamps.cpp  whereami.java
AtCoder/: CMakeLists.txt  abc208-A.cpp  abc208-B.cpp  abc208-C.cpp  abc208-D.cpp
CEOI/: hot.cpp  sim.cpp
CF/677/: bookshelf.cpp  district.cpp  elephant.cpp  pp.cpp
CF/Raif Round 1/: a.cpp  b.cpp  c.cpp
CodeJam/: 1A2008-Milkshakes.cpp  1A2008-Minimum.cpp  1A2021-AppendSort.cpp  1B-2021-DigitBlocks.cpp  1B-2021-subtransmutation.cpp  1B-2021-temp.cpp  A1.cpp  CMakeLists.txt  a.out  test.in  test.out
Codeforces/: 1006-D3-E.cpp  1025-D2-C.cpp  1027-D2-C.cpp  1028-D2-A.cpp  1031-DG-D.cpp  1043-D2-D.cpp  1043-D2-E.cpp  1055-D2-C.cpp  1059-D2-C.cpp  1060-DG-E.cpp  1062-D2-D.cpp  1066-D3-E.cpp  1077-D3-F1.cpp  1077-D3-F2.cpp  1084-D2-C.cpp  1103-D1-A.cpp  1114-D2-C.cpp  1151-D2-D.cpp  1152-D2-C.cpp  1187-D2-E.cpp  1198-D1-A.cpp  1203-D3-F1.cpp  1215-D2-C.cpp  1215-D2-D.cpp  1216-D2-A.cpp  1225-D2-D.cpp  1228-D2-C.cpp  1239-D1-A.cpp  1244-D2-E.cpp  1256-D3-F.cpp  1257-D2-D.cpp  1260-D2-C.cpp  1263-D2-A.cpp  1278-D2-C.cpp  1278-D2-D.cpp  1279-D2-D.cpp  1295-D2-D.cpp  1307-DG-A.cpp  1307-DG-B.cpp  1307-DG-C.cpp  (+265 more)
FHC/: CMakeLists.txt  CowntactTracing.cpp  DAVIDStuckcode.cpp  R2-A1.cpp  R2-B.cpp  R3-B.cpp  a.out  berr.cpp  cereal.cpp  hi.cpp  hi.h  inputBLOB.out  printer.cpp  race.cpp  reststops.cpp  rset.cpp  socdist.cpp  stuckrut.cpp  sus.cpp  swapswap.cpp  triangle.cpp  whereami.cpp
IOI/: printer.cpp  raisins.cpp  shoes.cpp
USACO/: CMakeLists.txt  GuardMark.cpp  promote.cpp  team.cpp
mathhw/: 2.3-ControllingCompanies.cpp  2.4-Tamworth.cpp  CMakeLists.txt  CSES-CommonDivisors.cpp  CSES-CountingDivisors.cpp  January21.D3.Problem1.cpp  January21.D3.WIPL.cpp  ModularArithmetic.cpp  NonPrimeFactors.cpp  O-Matching.cpp  PrimeGenerator.cpp  sad.cpp
trainingUSACO/: CMakeLists.txt  concom.cpp  fracdec.cpp  moneys.cpp  nocows.cpp  prefix.cpp  zerosum.cpp
